先修改npm中的名字

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pkgcloud",
+  "name": "pkgcloud1",
   "description": "An infrastructure-as-a-service agnostic cloud library for node.js",
   "version": "1.0.3",
   "author": "Nodejitsu Inc <info@nodejitsu.com>",
